--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -119,12 +119,14 @@ img {
     position: relative;
     padding: 100px 0 30px;
     background: transparent url("../img/bg-breadcrumb.jpg") center no-repeat;
+
     .h1 {
         font-weight: 600;
         font-size: 16px;
         color: $theme_color;
         padding-left: 45px;
         position: relative;
+
         &:before {
             @include pseudo;
             width: 30px;
@@ -135,17 +137,20 @@ img {
             @include prefix((transform: translateY(-50deg)), webkit moz);
         }
     }
+
     h1 {
         font-weight: 600;
         font-size: 55px;
         color: $theme_color;
         margin-bottom: 0;
     }
+
     ul.breadcrumb {
         background: transparent;
         padding-left: 0;
         padding-right: 0;
         margin: 0;
+
         .breadcrumb-item {
             color: $theme_color
         }
@@ -262,6 +267,10 @@ img {
         .navbar {
             width: 100%;
             z-index: 2;
+
+            .logo img {
+                max-height: 60px;
+            }
 
             .nav {
                 position: relative;
@@ -494,7 +503,7 @@ img {
                 color: $theme_color;
                 font-size: 45px;
                 font-weight: 300;
-                line-height: 82px;
+                //line-height: 82px;
                 text-transform: capitalize;
 
                 strong {
@@ -939,6 +948,7 @@ img {
     .about-us-wrap {
         .about-us {
             @extend %section;
+
             .image-column {
                 position: relative;
                 margin-bottom: 70px;
@@ -963,7 +973,7 @@ img {
                             right: -17px;
                             bottom: -17px;
                             z-index: 2;
-                            background-color: rgba(255,255,255,0.90);
+                            background-color: rgba(255, 255, 255, 0.90);
                             @include prefix((box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.10)), webkit moz);
                         }
 
@@ -1012,9 +1022,11 @@ img {
 
                     .image-box {
                         position: relative;
+
                         .image {
                             position: relative;
-                            @include prefix((box-shadow: 50px 70px 120px rgba(0,0,0,0.20)), webkit moz);
+                            @include prefix((box-shadow: 50px 70px 120px rgba(0, 0, 0, 0.20)), webkit moz);
+
                             img {
                                 position: relative;
                                 width: 100%;
@@ -1024,11 +1036,13 @@ img {
                     }
                 }
             }
+
             .content-column {
                 .inner-column {
                     position: relative;
                     padding-left: 80px;
                     z-index: 1;
+
                     .h1 {
                         font-size: 30px;
                         font-weight: 600;
@@ -1036,6 +1050,7 @@ img {
                         position: relative;
                         padding-left: 100px;
                         text-transform: uppercase;
+
                         &:before {
                             @include pseudo;
                             width: 70px;
@@ -1046,6 +1061,7 @@ img {
                             @include prefix((transform: translateY(-50%)), webkit moz ms o);
                         }
                     }
+
                     h2 {
                         font-size: 55px;
                         color: $theme_color;
@@ -1057,20 +1073,24 @@ img {
 
         .booking {
             @extend %section;
+
             .booking-left .inner-column {
                 h3.title {
                     font-size: 55px;
                     color: $theme_color;
                     text-transform: capitalize;
                 }
+
                 .content {
                     text-align: justify;
                 }
+
                 .booking-form {
                     padding: 20px;
                     margin-top: 30px;
                     background: transparent url("../img/bg-customers.jpg") left top repeat;
                     @include prefix((border-radius: 10px), webkit moz);
+
                     .form-title {
                         color: #fff;
                         font-size: 22px;
@@ -1079,28 +1099,34 @@ img {
                         text-align: center;
                         margin-bottom: 20px;
                     }
+
                     .form-control {
                         @include prefix((box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .4)), webkit moz);
                     }
+
                     .btn-primary {
                         width: 100%;
                         background-color: $theme_color_two;
                         border-color: $theme_color_two;
                         @include prefix((box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .4)), webkit moz);
                     }
+
                     .regis .inner .btn-primary {
                         background: $theme_color_two url("../img/edit.png") 20px no-repeat;
                         padding: 20px;
                         text-align: end;
                         text-transform: uppercase;
                     }
+
                     .info .inner ul li {
                         color: #fff;
                         font-weight: 600;
                         font-size: 15px;
+
                         &:first-child {
                             margin-bottom: 30px;
                         }
+
                         i {
                             width: 30px;
                             height: 30px;
@@ -1112,16 +1138,20 @@ img {
                             @include prefix((border-radius: 100%), webkit moz);
                             margin-right: 10px;
                         }
+
                         strong {
                             margin-right: 15px;
                         }
                     }
+
                     .logo .inner {
                         padding: 18px 0;
                     }
                 }
             }
-            .booking-right {}
+
+            .booking-right {
+            }
         }
 
         .wts-map {
