--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -114,6 +114,9 @@
   .page-breadcrumb h1 {
     font-size: 46px; }
 
+  #header .header-top .container {
+    display: none; }
+
   #main .about-us-wrap .booking .booking-left .inner-column .booking-form .logo .inner {
     padding: 0 !important;
     text-align: center; }
@@ -145,6 +148,8 @@
   #main .about-us-wrap .wts-map {
     padding-top: 30px;
     padding-bottom: 30px; }
+  #main .home-customers .owl-customers .customer-inner {
+    margin: 0 15px; }
 
   #footer .footer-middle {
     padding: 30px 0; }
